fix(input): remove hard character limit to align label and input width

--- a/packages/components/src/styles/internal/_form-components.scss
+++ b/packages/components/src/styles/internal/_form-components.scss
@@ -453,7 +453,7 @@ $input-valid-types:
 		@extend %db-overwrite-font-size-xs;
 
 		padding-block-end: variables.$db-spacing-fixed-xs;
-		max-inline-size: 25ch;
+		max-inline-size: 100%;
 		text-overflow: ellipsis;
 		white-space: nowrap;
 		overflow: hidden;
